add partial helper, and make scss dir.

--- a/content/pages/index.haml
+++ b/content/pages/index.haml
@@ -1,1 +1,5 @@
-%section.articles= article_summaries(latest_articles)
+Template: home
+
+%article#feature.inner-wrap.featured
+  %section#excerpt.top
+
