--- a/themes/llex/views/_header.haml
+++ b/themes/llex/views/_header.haml
@@ -9,6 +9,6 @@
     %li
       %a{href: "/"}Home
     %li
-      %a{href: "writings"}Writings
+      %a{href: "/writings"}Writings
     %li
-      %a{href: "about"}About
+      %a{href: "/about"}About
