--- a/themes/llex/views/_footer.haml
+++ b/themes/llex/views/_footer.haml
@@ -8,7 +8,7 @@
         %a{href: "/"}Home
         |
       %li
-        %a{href: "writings"}Writings
+        %a{href: "/writings"}Writings
         |
       %li
-        %a{href: "about"}About
+        %a{href: "/about"}About
