--- a/themes/llex/views/layout.haml
+++ b/themes/llex/views/layout.haml
@@ -13,12 +13,13 @@
         = @site_title
     <!--[if ! lte IE 6]><!-->
     %link{href: "/css/style.css", media: "screen", rel: "stylesheet"}
+    - if local_stylesheet?
+      %link{href: "/css/local.css", media: "screen", rel: "stylesheet"}
     <!--<![endif]-->
     /[if lte IE 6]
       %link{rel: "stylesheet", href: "http://universal-ie6-css.googlecode.com/files/ie6.1.1.css", media: "screen, projection"}
     /[if lt IE 9]
       %script{src: "//html5shim.googlecode.com/svn/trunk/html5.js"}
-    = local_stylesheet_link_tag('local')
     %link(href="/articles.xml" rel="alternate" type="application/atom+xml")
     = partial :analytics
   %body{class: @page.metadata('class')? @page.metadata('class') : @page.heading}
