--- a/views/_bottom.haml
+++ b/views/_bottom.haml
@@ -1,5 +1,18 @@
+-# Loads jQuery from Googles CDN. If there's no internet connection it'll
+-# fall back to the local version
+%script{:src => "//ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.js"}
+:javascript
+  window.jQuery || document.write('<script src="/assets/j/libs/jquery.js">\x3C/script>')
+
 %script{:src => "/assets/j/script.js"}
 
+-# A few goodies that help makes IE 6-8 behave a little better when using HTML5/CSS3
+/[if (lt IE 9) & (!IEMobile)]
+  <script src="/assets/j/libs/domassistant.js"></script>
+  <script src="/assets/j/libs/selectivizr.js"></script>
+  <script src="/assets/j/libs/respond.js"></script>
+
+-# Google analytics code.
 - if @google_analytics_code
   :javascript
     var _gaq = _gaq || [];
