--- a/views/scss/partials/_columns.scss
+++ b/views/scss/partials/_columns.scss
@@ -1,4 +1,4 @@
-$less-grid-element: unquote("body") !default;
+$less-grid-element: unquote("#container") !default;
 $less-grid-padding: true !default;
 $less-font-family: Arial, sans-serif !default;
 
