--- a/views/scss/style.scss
+++ b/views/scss/style.scss
@@ -3,27 +3,28 @@
 @import "partials/columns";
 //@import 'typography';
 
-/* Default Layout: 992px.
-   Gutters: 24px.
-   Outer margins: 48px.
-   Leftover space for scrollbars @1024px: 32px.  */
+//   Default Layout: 992px.
+//   Gutters: 24px.
+//   Outer margins: 48px.
+//   Leftover space for scrollbars @1024px: 32px.
 #{$less-grid-element} {
-  @include grid(10)
+  @include grid(10);
+  margin: 0 auto;
 }
 
-/* Retina media query.
-   Overrides styles for devices with a
-   device-pixel-ratio of 2+, such as iPhone 4.  */
+//   Retina media query.
+//   Overrides styles for devices with a
+//   device-pixel-ratio of 2+, such as iPhone 4.
 
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
   #{$less-grid-element} {
   }
 }
 
-/* Mobile Layout: 320px.
-   Gutters: 24px.
-   Outer margins: 34px.
-   Inherits styles from: Default Layout.  */
+//   Mobile Layout: 320px.
+//   Gutters: 24px.
+//   Outer margins: 34px.
+//   Inherits styles from: Default Layout.
 
 @media only screen and (max-width: 767px) {
   #{$less-grid-element} {
@@ -31,22 +32,23 @@
   }
 }
 
-/* Tablet Layout: 768px.
-   Gutters: 24px.
-   Outer margins: 28px.
-   Inherits styles from: Default Layout.  */
+///* Tablet Layout: 768px.
+//   Gutters: 24px.
+//   Outer margins: 28px.
+//   Inherits styles from: Default Layout.  */
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   #{$less-grid-element}
     {@include grid(8)}
 }
 
-/* Wide Mobile Layout: 480px.
-   Gutters: 24px.
-   Outer margins: 22px.
-   Inherits styles from: Default Layout, Mobile Layout.  */
+///* Wide Mobile Layout: 480px.
+//   Gutters: 24px.
+//   Outer margins: 22px.
+//   Inherits styles from: Default Layout, Mobile Layout.  */
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
   #{$less-grid-element}
    { @include grid(5)}
 }
+
