--- a/views/_work/_footer.haml
+++ b/views/_work/_footer.haml
@@ -1,5 +1,11 @@
-%footer.branding
-  %p
-    Powered by Nesta, a
-    = succeed "." do
-      %a(href="http://nestacms.com") Ruby CMS
+/ footer start
+#footer(role="contentinfo")
+  .row
+    .column.info
+      %p Glimmer
+    .column.generator
+      %p
+        Powered by Nesta, a
+        = succeed "." do
+          %a(href="http://nestacms.com") Ruby CMS
+/ footer end
