--- a/views/work.haml
+++ b/views/work.haml
@@ -1,7 +1,9 @@
 !!! 5
 %html{:lang => "en", :class => "no-js"}
   %head
-    = partial "head"
+    = partial "top"
+    %link{:href => "/css/work.css", :rel => "stylesheet"}
+    %link{:href => "./style.css", :rel => "stylesheet"}
   %body
     #container
       = partial "_work/header"
