--- a/views/work.haml
+++ b/views/work.haml
@@ -3,7 +3,7 @@
   %head
     = partial "top"
     %link{:href => "/css/work.css", :rel => "stylesheet"}
-    %link{:href => "./style.css", :rel => "stylesheet"}
+    %link{:href => "#{@page.abspath}/style.css", :rel => "stylesheet"}
   %body
     #container
       = partial "_work/header"
