--- a/content/pages/work/glimmer/style.scss
+++ b/content/pages/work/glimmer/style.scss
@@ -1,11 +1,84 @@
-$main-bg: #68492e;
-//$main-bg: #fff;
-$viewbox-bg: #543b26;
-$assets-path: /assets/i/work/2012/glimmer;
+@import "base";
+@import "layout";
 
-body {
-//  margin: 0;
-//  padding: 0;
-//  background: $main-bg url("#{$assets-path}/bg_banner.png") top center repeat-x;
-//  font-size: 100%;
+$orange: #d93645;
+$white: #f6f5f0;
+$black: #292929;
+$blue: #12aee8;
+
+$default-text-shadow-color: rgba($black, 0.6);
+$default-text-shadow-blur: 0.5px;
+$default-text-shadow-v-offset: 0.5px;
+$default-text-shadow-h-offset: 0.5px;
+
+// --- Layout ---
+
+.topbar {
+  @include bar(0 0 2px 2px);
+}
+
+.header {
+  padding: 20px 0 20px 0;
+
+  .nav {
+    @include center;
+    margin: 20px auto 0;
+    display: block;
+    min-height: 35px;
+    padding: 10px 0 0;
+
+    .nav-ul {
+      @include center;
+      display: block;
+      border: none;
+      padding: 0;
+      margin: 0;
+
+      .logo {
+        .mark {
+          color: $orange;
+          font-size: 32px;
+        }
+      }
+
+      .nav-li {
+        display: inline-block;
+        padding: 0 25px 0;
+        margin: 0;
+        position: relative;
+        border: {
+          color: lighten($black, 50%);
+          top: 0;
+          bottom: 0;
+          left: 0;
+          right: 1px solid lighten($black, 50%);
+        }
+        &:first-child {
+          padding-left: 0;
+        }
+        &:last-child {
+          padding-right: 0;
+          border-right: 0;
+        }
+      }
+
+        .nav-link {
+          @include nav-link-font($black);
+
+          &:hover {
+            padding-bottom: 2px;
+            border-bottom: 3px solid $blue;
+          }
+
+          .active {
+            color: #444;
+          }
+        }
+    }
+  }
+
+}
+
+.bottombar{
+  @include bar;
 }
