add logo effect

--- a/content/pages/work/glimmer/_base.scss
+++ b/content/pages/work/glimmer/_base.scss
@@ -28,6 +28,5 @@
     weight: bold;
     size: 14px;
   }
-  @include single-text-shadow;
-//  @include text-shadow(rgba(0,0,0,0.1) -1px 0, rgba(0,0,0,0.1) 0 -1px, rgba(255,255,255,0.1) 0 1px, rgba(0,0,0,0.1) -1px -1px);
+  @include text-shadow(rgba($color,0.1) -1px 0, rgba($color,0.1) 0 -1px, rgba(255,255,255,0.1) 0 1px, rgba($color,0.1) -1px -1px);
 }
