--- a/content/pages/work/glimmer/index.haml
+++ b/content/pages/work/glimmer/index.haml
@@ -14,14 +14,14 @@ Class: glimmer
         %li.nav-li
           %a.nav-link.active(href="./glimmer" title="Home") Home
         %li.nav-li
-          %a.nav-link(href="./glimmer/list" title="Shop") Shop
-        %li.nav-li.logo
+          %a.logo(href="./glimmer/list" title="Shop")
+        %li.nav-li
           %a.nav-link(href="./glimmer/news" title="Blog") home
         %li.nav-li
           %a.nav-link(href="./glimmer/news" title="Blog") Blog
         %li.nav-li
           %a.nav-link(href="./glimmer/news" title="Blog") Blog
-
+  / header end
 .bg
   / body
   .feature.sixteen.columns
