--- a/content/pages/work/glimmer/_base.scss
+++ b/content/pages/work/glimmer/_base.scss
@@ -30,3 +30,20 @@
   }
   @include text-shadow(rgba($color,0.1) -1px 0, rgba($color,0.1) 0 -1px, rgba(255,255,255,0.1) 0 1px, rgba($color,0.1) -1px -1px);
 }
+
+@mixin slide-arrow($color, $bcolor, $radius) {
+  color: $color;
+  width: 50px;
+  padding-bottom: 8px;
+  text-align: center;
+  background-color: rgba($bcolor,1.0);
+  text: {
+    transform: uppercase;
+    decoration: none;
+  }
+  font: {
+    family: "neuzon-1", "neuzon-2", sans-serif;
+    size: 62px;
+  }
+  @include border-radius($radius);
+}
