feature part finish

--- a/content/pages/work/glimmer/index.haml
+++ b/content/pages/work/glimmer/index.haml
@@ -32,17 +32,17 @@ Class: glimmer
       .slideshow
         .slideitem
           %span.dark.lb
-            .ol
-              .li
-                %a(href="#") link 1
-              .li
-                %a(href="#") link 2
+            %ol.span-ol
+              %li.span-ol-li
+                %a.span-link(href="#") link 1
+              %li.span-ol-li
+                %a.span-link(href="#") link 2 long long long long
           %span.light.rt
-            .ul
-              .li
-                %a(href="#") link 3
-              .li
-                %a(href="#") link 4
+            %ul.span-ul
+              %li.span-ul-li
+                %a.span-link(href="#") link 3
+              %li.span-ul-li
+                %a.span-link(href="#") link 4 long long long long
           %img(src="/assets/glimmer/assets/images/slideshow.jpg")
   / body end
 .ft
