--- a/content/pages/work/glimmer/_base.scss
+++ b/content/pages/work/glimmer/_base.scss
@@ -57,3 +57,12 @@
   @include border-radius(6px);
   @include box-shadow(rgba(0,0,0,0.8) 1px 1px 2px 0 inset);
 }
+
+@mixin slide-span-link($color, $lcolor) {
+  color: $color;
+  text-decoration: none;
+  padding-bottom: 0px;
+  &:hover {
+    border-bottom: 2px solid $lcolor;
+  }
+}
