--- a/content/pages/work/glimmer/home.haml
+++ b/content/pages/work/glimmer/home.haml
@@ -12,7 +12,7 @@ Class: glimmer
     .nav
       %ul.nav-ul
         %li.nav-li
-          %a.nav-link.active(href="./glimmer" title="Home") Home
+          %a.nav-link.active(href="./glimmer/index" title="Home") Home
         %li.nav-li
           %a.logo(href="./glimmer/list" title="Shop")
         %li.nav-li
@@ -44,6 +44,27 @@ Class: glimmer
               %li.span-ul-li
                 %a.span-link(href="#") link 4 long long long long
           %img(src="/assets/glimmer/assets/images/slideshow.jpg")
+  .sub.section
+    .row
+      .one-third.column
+        .panel
+          %span one
+      .one-third.column
+        .panel
+          %span two
+      .one-third.column
+        .panel
+          %span three
+    .row
+      .one-third.column
+        .panel
+          %span one
+      .one-third.column
+        .panel
+          %span two
+      .one-third.column
+        .panel
+          %span three
   / body end
 .ft
   / footer
