--- a/views/_scss/work.scss
+++ b/views/_scss/work.scss
@@ -3,7 +3,7 @@
 @import "partials/columns";
 //@import 'typography';
 
-$less-grid-element: unquote("#main") !default;
+$less-grid-element: unquote("#container") !default;
 $less-grid-padding: true !default;
 $less-font-family: Arial, sans-serif !default;
 
