--- a/views/work.haml
+++ b/views/work.haml
@@ -1,9 +1,9 @@
 !!! 5
 %html{:lang => "en", :class => "no-js"}
   %head
-    = partial "top"
-    / %link{:href => "/css/work.css", :rel => "stylesheet"}
-    %link{:href => "#{@page.abspath}/../style.css", :rel => "stylesheet"}
+    = partial "_/top"
+    %link{:href => "/css/work.css", :rel => "stylesheet"}
+    %link{:href => "#{@page.abspath}.css", :rel => "stylesheet"}
   %body
     .container.content
       = partial "_work/header"
@@ -12,4 +12,4 @@
         = yield
 
       = partial "_work/footer"
-    = partial "bottom"
+    = partial "_/bottom"
