- add browsing - dropdown main level ok

--- a/content/pages/work/glimmer/home.haml
+++ b/content/pages/work/glimmer/home.haml
@@ -40,18 +40,7 @@ Class: glimmer
       .one-third.column
         .panel
           %span three
-    .row
-      .one-third.column
-        .panel
-          %span one
-      .one-third.column
-        .panel
-          %span two
-      .one-third.column
-        .panel
-          %span three
   / body end
 .ft
-  / footer
-  .bottombar.sixteen.columns
+  = partial "_zine/glimmer/footer"
 / Glimmer for taobao end
