- make list class name simple - improve @mixin bar($bcolor, $bimg, $radius: 2px) - add some style to dropdown <ul>

--- a/content/pages/work/glimmer/scss/_base.scss
+++ b/content/pages/work/glimmer/scss/_base.scss
@@ -7,14 +7,14 @@
   overflow: hidden;
 }
 
-@mixin bar($radius: 2px) {
-  background: lighten($black, 5%);
-  width: 100%;
+@mixin bar($bcolor, $bimg, $radius: 2px) {
+  background: lighten($bcolor, 5%) url($bimg) repeat;
+//  width: 100%;
   height: 6px;
   margin-top: 0px;
   top: 0;
   @include border-radius($radius);
-  @include rotate(.1deg);
+//  @include rotate(.1deg);
 }
 
 @mixin center {
