--- a/views/_zine/glimmer/_header.haml
+++ b/views/_zine/glimmer/_header.haml
@@ -3,14 +3,14 @@
 .header.sixteen.columns.clearfix
   .nav
     %ul.nav-ul
-      %li.nav-li
-        %a.nav-link.active(href="#{@page.abspath}/../home" title="Home") Home
-      %li.nav-li
+      %li.li
+        %a.link.active(href="#{@page.abspath}/../home" title="Home") Home
+      %li.li
         %a.logo(href="./glimmer/list" title="Shop")
-      %li.nav-li
-        %a.nav-link(href="#{@page.abspath}/../shop" title="Blog") Shop
-      %li.nav-li
-        %a.nav-link(href="./glimmer/news" title="Blog") Blog
-      %li.nav-li
-        %a.nav-link(href="./glimmer/news" title="Blog") Blog
+      %li.li
+        %a.link(href="#{@page.abspath}/../shop" title="Blog") Shop
+      %li.li
+        %a.link(href="./glimmer/news" title="Blog") Blog
+      %li.li
+        %a.link(href="./glimmer/news" title="Blog") Blog
 / header end
