--- a/content/pages/work/glimmer/scss/style.scss
+++ b/content/pages/work/glimmer/scss/style.scss
@@ -22,7 +22,7 @@ body {
 }
 
 .topbar {
-  @include bar(0 0 2px 2px);
+  @include bar($black, $bimg-dark, 0 0 2px 2px);
 }
 
 .header {
@@ -42,7 +42,7 @@ body {
       padding: 0;
       margin: 0;
 
-      .nav-li {
+      .li {
         display: inline-block;
         padding: 0 25px 0 21px;
         margin: 0;
@@ -62,7 +62,7 @@ body {
           border-right: 0;
         }
 
-        .nav-link {
+        .link {
           @include nav-link-font($black);
 
           &:hover {
@@ -241,13 +241,14 @@ body {
       padding: 0;
       margin: 15px 0;
 
-      .nav-li {
+      .li {
         display: inline-block;
         position: relative;
+//        cursor: pointer;
 //        padding: 12px 0;
 //        margin: 0;
 
-        .nav-link {
+        .link {
           display: block;
           @include nav-link-font($black);
           letter-spacing: 2px;
@@ -256,28 +257,37 @@ body {
             weight: 700;
           };
           padding: 7px 4px 5px 4px;
-          border: 4px solid $black;
-          width: 220px;
+          border: 4px solid lighten($black, 5%);
+          @include border-radius(3px);
+          width: 200px;
 
           &:hover {
             @extend .nav-link;
             color: $white;
-            background: $black;
+            background: lighten($black, 5%);
           }
         }
 
-        &:hover > .sub-ul {
+        &:hover > .drop-ul {
           display: block;
         }
 
-        .sub-ul {
-          background: $black;
-//          display: none;
+        .drop-ul {
+          @include bar($black, $bimg-dark, 4px 4px 0 0);
+          @include box-shadow(rgba(0,0,0,0.32) 0 0 10px);
+          display: none;
           position: absolute;
           top: 40px;
-          left: -360px; // TODO: @media
+          left: -372px; // TODO: @media
 
-          height: 335px;
+          height: 320px;
+
+          .li {
+            display: inline-block;
+            padding: 60px;
+            margin: 15px 15px 0 0;
+            background: $white;
+          }
         }
       }
     }
@@ -296,5 +306,5 @@ body {
 }
 
 .bottombar {
-  @include bar;
+  @include bar($black, $bimg-dark, 2px 2px 0 0);
 }
