--- a/views/_zine/glimmer/_dropmenu.haml
+++ b/views/_zine/glimmer/_dropmenu.haml
@@ -1,9 +1,7 @@
-%div.nav
+.nav
   %span.head Browsing:
   %ul.nav-ul
-    %li.nav-li
-      %a.nav-link(href="#") All Items
-      %ul.sub-ul.sixteen.columns
-        %li.sub-li 1
-        %li.sub-li 2
-        %li.sub-li 3
+    %li.li
+      %a.link(href="#") All Items
+      %ul.drop-ul.sixteen.columns
+        %li.li 1
