- use guard-livereload - recode header partial

--- a/content/pages/work/glimmer/home.haml
+++ b/content/pages/work/glimmer/home.haml
@@ -4,7 +4,10 @@ Title: Glimmer @ Taobao
 Class: glimmer
 / Date: Jan 2012
 
-/ Glimmer for taobao start
+
+/
+  Glimmer for taobao start
+  ============================================================================
 .hd
   = partial "_zine/glimmer/header"
 .bg
@@ -43,4 +46,6 @@ Class: glimmer
   / body end
 .ft
   = partial "_zine/glimmer/footer"
-/ Glimmer for taobao end
+/
+  Glimmer for taobao end
+  ============================================================================
