--- a/views/_work/_header.haml
+++ b/views/_work/_header.haml
@@ -1,9 +1,7 @@
-/ masthead start
-#masthead(role="banner")
-  .row
-    .column.logo
-      %a(href="/")= @heading
-      %span= @subtitle
-    .column.menu
-      - display_menu(@menu_items, :levels => 1)
-/ masthead end
+/
+  Navbar
+  ============================================================================
+.navbar
+  .navbar-inner
+    .container
+      %a.brand(href="#")ijoye
