--- a/content/pages/work/glimmer/scss/_base.scss
+++ b/content/pages/work/glimmer/scss/_base.scss
@@ -1,23 +1,25 @@
+
 @import "compass/css3";
+@import "compass_twitter_bootstrap";
 //@import "compass/utilities/general/clearfix";
 
 @mixin bar($bcolor, $bimg, $radius: 2px) {
-  background: lighten($bcolor, 5%) url($bimg) repeat;
-//  width: 100%;
+  @extend .navbar-inner;
   height: 6px;
-  margin-top: 0px;
-  top: 0;
+  background: lighten($bcolor, 5%) url($bimg) repeat;
   @include border-radius($radius);
-//  @include rotate(.1deg);
+  $shadow: 0 1px 1px rgba($bcolor, .25), inset 0 -1px 0 rgba($bcolor, .1);
+  @include box-shadow($shadow);
 }
 
-@mixin center {
-  text-align: center;
-  margin: 0px auto;
-}
+//@mixin center {
+//  text-align: center;
+//  margin: 0px auto;
+//}
 
 @mixin nav-link-font($color) {
   color: $color;
+  background: none;
   letter-spacing: 0px;
   text: {
     transform: uppercase;
@@ -29,6 +31,7 @@
     size: 14px;
   }
   @include text-shadow(rgba($color,0.1) -1px 0, rgba($color,0.1) 0 -1px, rgba(255,255,255,0.1) 0 1px, rgba($color,0.1) -1px -1px);
+  @include border-radius(0);
 }
 
 @mixin slide-arrow($color, $bcolor, $radius) {
