--- a/views/_scss/work.scss
+++ b/views/_scss/work.scss
@@ -1,4 +1,4 @@
-@import "compass_twitter_bootstrap";
+//@import "compass_twitter_bootstrap";
 //@import "partials/reset";
 //@import "partials/css3";
 //@import "partials/columns";
