--- a/views/_zine/glimmer/_header.haml
+++ b/views/_zine/glimmer/_header.haml
@@ -2,10 +2,10 @@
 /
   Masthead
   ============================================================================
-.header.masthead.row
+.header.row
   .span2.offset1
     %h1 Glimmer
-    %p.lead Something about Glimmer
+    %p.lead
   .mastnav.span8
     %ul.nav
       %li.active
