--- a/content/pages/work/glimmer/scss/application.scss
+++ b/content/pages/work/glimmer/scss/application.scss
@@ -12,6 +12,7 @@ $bimg-light: "#{$assets}/texture.png";
 @import "header";
 @import "feature";
 @import "browsing";
+@import "marketing";
 
 body {
   background: url(#{$assets}/bg-repeat.png) repeat 0 0 #dfd5c9;
