almost finish page home

--- a/content/pages/work/glimmer/home.haml
+++ b/content/pages/work/glimmer/home.haml
@@ -18,7 +18,7 @@ Class: glimmer
     .carousel.slide.container
       .carousel-inner
         .item.active
-          %img(src="/assets/glimmer/assets/images/slideshow.jpg")
+          %img(src="http://placehold.it/900x400")
           %span.dark.lb
             %ol
               %li
@@ -37,22 +37,27 @@ Class: glimmer
     Marketing
     ============================================================================
   .marketing
-    .row
-      .span4
-        %h2 one
-        %p something
-      .span4
-        %h2 one
-        %p something
-      .span4
-        %h2 one
-        %p something
-      .span4
-        %h2 one
-        %p something
-      .span4
-        %h2 one
-        %p something
+    %ul.thumbnails
+      %li.span4
+        .thumbnail.f
+          %img(src="http://placehold.it/300x180")
+          %h4 label
+          %p caption
+      %li.span4
+        .thumbnail.f
+          %img(src="http://placehold.it/300x180")
+          %h4 label
+          %p caption
+      %li.span4
+        .thumbnail.f
+          %img(src="http://placehold.it/300x180")
+          %h4 label
+          %p caption
+      %li.span4
+        .thumbnail.f
+          %img(src="http://placehold.it/300x180")
+          %h4 label
+          %p caption
 
   / /marketing
 .ft
