--- a/content/pages/work/glimmer/shop.haml
+++ b/content/pages/work/glimmer/shop.haml
@@ -14,26 +14,33 @@ Class: glimmer
 
     = partial "_zine/glimmer/dropmenu"
 
-  .sub.section
-    .one-third.column
-      .panel
-        %span one
-    .one-third.column
-      .panel
-        %span two
-    .one-third.column
-      .panel
-        %span three
-    .one-third.column
-      .panel
-        %span one
-    .one-third.column
-      .panel
-        %span two
-    .one-third.column
-      .panel
-        %span three
-  / body end
+  /
+    Marketing
+    ============================================================================
+  .marketing
+    %ul.thumbnails
+      %li.span4
+        .thumbnail.f
+          %img(src="http://placehold.it/300x180")
+          %h4 label
+          %p caption
+      %li.span4
+        .thumbnail.f
+          %img(src="http://placehold.it/300x180")
+          %h4 label
+          %p caption
+      %li.span4
+        .thumbnail.f
+          %img(src="http://placehold.it/300x180")
+          %h4 label
+          %p caption
+      %li.span4
+        .thumbnail.f
+          %img(src="http://placehold.it/300x180")
+          %h4 label
+          %p caption
+
+  / /marketing
 .ft
   = partial "_zine/glimmer/footer"
 / Glimmer for taobao end
