--- a/content/pages/work/glimmer/scss/_marketing.scss
+++ b/content/pages/work/glimmer/scss/_marketing.scss
@@ -1,3 +1,11 @@
 .marketing {
   margin-bottom: $baseLineHeight;
+
+  .f {
+    padding: 7px;
+    background: rgba($white,0.3) url($bimg-light) repeat 0 0;
+    border: 1px solid lighten($black, 50%);
+    @include box-shadow(1px 1px 15px rgba($black, .3));
+  }
+
 }
